# matrix-protocol-helper

./: .gitignore  ENTERPRISE.md  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci-build.yml  release.yml
backup/: README.md  release.yml
scripts/: build.sh  dev.sh  install_essentials.sh  install_rust.sh  notarize-macos.md
src/: App.tsx  client.css  icons.tsx  index.html  main.ts  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  main.rs  pty.rs
src/components/: SidebarRain.tsx
src/flows/: Flows.tsx  UpdateModal.tsx
src/lib/: tauri.ts
src/views/: Console.tsx  Views.tsx
