[package]
name = "matrix-protocol-helper"
version = "0.1.0"
edition = "2021"
description = "OS protocol handler for matrix:// deep links that shells out to matrix-cli safely."
license-file = "../../LICENSE"
authors = ["Matrix Contributors"]
readme = "../../README.md"
# This line tells Cargo to execute your build script.
build = "src/build.rs"

[dependencies]
tauri = { version = "^2.0.0-beta", features = [] }
tauri-plugin-dialog = "^2.0.0-beta"
tauri-plugin-deep-link = "^2.0.0-beta"
tauri-plugin-opener = "^2.0.0-beta"

url = "2.5"
which = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "^2.0.0-beta", features = [] }
