[package]
name = "matrix-protocol-helper"
version = "0.1.0"
edition = "2021"
description = "OS protocol handler for matrix:// deep links that shells out to matrix-cli safely."
license-file = "../../LICENSE"
authors = ["Matrix Contributors"]
readme = "../../README.md"
# This line tells Cargo to execute your build script.
build = "src/build.rs"

[dependencies]
# Pinned to the stable Tauri 2.x line (matches the JS @tauri-apps/* 2.x deps).
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"

url = "2.5"
which = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
