[package]
name = "matrix-protocol-helper"
version = "0.2.0"
edition = "2021"
description = "MatrixHub Client — desktop companion that manages the local Matrix environment and installs components from MatrixHub."
license-file = "../../LICENSE"
authors = ["Matrix Contributors"]
readme = "../../README.md"
# This line tells Cargo to execute your build script.
build = "src/build.rs"

[dependencies]
# Pinned to the stable Tauri 2.x line (matches the JS @tauri-apps/* 2.x deps).
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"

url = "2.5"
which = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
